# SNG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: std.fragment  std.vertex
code/: CMakeLists.txt
code/App/: CMakeLists.txt
code/App/include/App/: Events.h
code/App/include/App/Graphics/: ITextureMgr.h
code/App/include/App/UI/: IWindow.h
code/App/source/graphics/: RenderContext.cpp
code/SDLApp/: CMakeLists.txt
code/SDLApp/include/SDL/Graphics/: TextureMgr.h
code/SDLApp/source/: App.cpp
code/SDLApp/source/Graphics/: Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  TextureMgr.cpp
code/SDLApp/source/UI/: Window.cpp  Window.h
code/SNG/: CMakeLists.txt
code/SNG/include/: AppFactory.h
code/SNG/source/: AppFactory.cpp  game.cpp  main.cpp
code/SNG/source/Game/: Game.cpp  Game.h  GameContext.cpp  GameContext.h
code/SNG/source/Game/graphics/: RenderContext.cpp  RenderContext.h
code/SNG/source/Proxies/: SDLAppProxy.cpp  SDLAppProxy.h
code/include/: AppFactory.h  Game.h
code/include/App/: AppBase.h  IApp.h  IAppDelegate.h  IUIFactory.h  Identifiers.h
code/include/App/Graphics/: IRenderer.h  ITexture.h  ITextureMgr.h  RenderContext.h
code/include/App/UI/: IWindow.h
code/include/SDL/: App.h  Init.h  UIFactory.h  Window.h
code/include/SDL/Graphics/: Renderer.h  Texture.h  TextureMgr.h
code/include/SDL/UI/: Window.h
code/libs/: CMakeLists.txt
code/libs/App/: CMakeLists.txt
code/libs/App/include/App/: AppBase.h  AppContext.h  Events.h  IApp.h  IAppDelegate.h
code/libs/App/source/: AppBase.cpp  AppContext.cpp
code/libs/App/source/graphics/: RenderContext.cpp
code/libs/AppIdentifiers/: CMakeLists.txt
code/libs/AppIdentifiers/include/App/: Identifiers.h
code/libs/AppInterfaces/: CMakeLists.txt
code/libs/AppInterfaces/include/App/Interfaces/Graphics/: IImageSurfaceLoader.h  IRenderer.h  IRenderer2D.h  ITTFSurfaceLoader.h  ITextureMgr.h
code/libs/SDLApp/: CMakeLists.txt
code/libs/SDLApp/include/SDL/: App.h  IAppDelegate.h
code/libs/SDLApp/source/: App.cpp
code/libs/SDLApp/source/Graphics/: TextureMgr.h
code/libs/SDLApp/source/UI/: Window.cpp  Window.h
code/libs/SDLGraphics/: CMakeLists.txt
code/libs/SDLGraphics/include/SDL/Graphics/: Renderer.h  SurfaceBase.h  SurfaceMgr.h  TextureMgr.h
code/libs/SDLGraphics/source/Graphics/: Renderer.cpp  SurfaceBase.cpp  SurfaceMgr.cpp  Texture.cpp  Texture.h  TextureMgr.cpp
code/libs/SDLGraphicsImage/: CMakeLists.txt
code/libs/SDLGraphicsImage/include/SDL/Graphics/Image/: Surface.h  SurfaceLoader.h
code/libs/SDLGraphicsImage/source/Graphics/Image/: Surface.cpp  Surface.h  SurfaceLoader.cpp
code/libs/SDLGraphicsOpenGL/: CMakeLists.txt
code/libs/SDLGraphicsOpenGL/include/SDL/Graphics/OpenGL/: Renderer.h  ShaderSupport.h  TextureMgr.h
code/libs/SDLGraphicsOpenGL/source/Graphics/OpenGL/: Renderer.cpp  ShaderSupport.cpp  Texture.cpp  Texture.h  TextureMgr.cpp
code/libs/SDLGraphicsTTF/: CMakeLists.txt
code/libs/SDLInterfaces/: CMakeLists.txt
code/libs/SDLInterfaces/include/SDL/Graphics/: ISurface.h  ISurfaceMgr.h  ISurfaceProvider.h
code/libs/SDLInterfaces/include/SDL/UI/: IWindow.h  IWindowProvider.h
code/source/: AppFactory.cpp  game.cpp  main.cpp
code/source/App/: AppBase.cpp  AppContext.cpp
code/source/SDL/: App.cpp  Init.cpp  UIFactory.cpp  Window.cpp
code/source/SDL/Graphics/: Renderer.cpp  Texture.cpp  TextureMgr.cpp
code/source/SDL/UI/: Window.cpp
libs/cpp-utils/code/: CMakeLists.txt
libs/cpp-utils/code/include/cpp-utils/: Assert.h  Identifier.h  Identifier.inl  Signal.h  Signal.inl
libs/cpp-utils/test/src/: SignalTests.cpp
scripts/: clean_proj.bat  gen_proj-llvm.bat  gen_proj-vsc.bat  gen_proj.bat  start_proj-llvm.bat  start_proj-vsc.bat
scripts/cmake/: utils.cmake
scripts/cmd/: CreateAndStartProject.bat  GenerateVSSolution.bat  Notification.bat
